# stack_size_summarizer

./: CMakeLists.txt  README.md
include/: common_functions.h  file_stream_wrapper.h  proc_filesystem_reader.h  ptr_wrapper.cpp  ptr_wrapper.h  signal_handler_observer.h  signal_safe_mutex.h  sleep_primitive.h  subscriber.h
src/: common_functions.cpp  file_stream_wrapper.cpp  main.cpp  proc_filesystem_reader.cpp  signal_handler_observer.cpp  signal_safe_mutex.cpp  sleep_primitive.cpp
